Update for Apicurio